--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.15.16",
+    "com.unity.burst": "1.7.2",
+    "com.unity.collab-proxy": "1.15.17",
+    "com.unity.collections": "1.2.4",
     "com.unity.feature.2d": "1.0.0",
     "com.unity.feature.cinematic": "1.0.0",
     "com.unity.ide.rider": "3.0.14",
@@ -11,7 +13,7 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.7.6",
+    "com.unity.visualscripting": "1.7.8",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
